# foodgram_fastapi

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: factory.py
app/api/v1/: __init__.py  router.py
app/api/v1/routes/: ping.py  ping_db.py
app/core/: config.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 514f5ec3e8f2_add_users_table.py  691697b1ee42_init_users.py  f82cfd21abe9_add_users_table_fix_template.py
app/db/models/: user.py
docs/: api_contract.md  auth_flow.md  ci_plan.md  contract_deltas.md  decisions.md  dod.md  domain_model.md  env_vars.md  errors.md  infra_plan.md  manual_checks.md  media_policy.md  migrations_plan.md  models_mapping.md  observability.md  openapi-schema.yml  pagination_filters.md  permissions.md  quality.md  routes_map.md  shopping_list_export.md  test_plan.md
