[tool.poetry]
name = "foodgram-fastapi"
version = "0.1.0"
description = ""
authors = ["Диана Амирханова <dinaami187@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.119.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
psycopg2-binary = "^2.9.11"
alembic = "^1.17.0"
pydantic-settings = "^2.11.0"
asyncpg = "^0.30.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"
black = "^25.9.0"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
anyio = "^4.11.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
